# discord-bot

./: .gitignore  README.md  admin.yaml  bot.py  bot_client.py  channels.py  env.py  messages.yaml  problems.yaml  pyproject.toml  requirements.txt  roles.py  run.py
.github/workflows/: cla.yml
bot/: .#bot_client.py  __init__.py  bot_client.py  channels.py  commands.py  database.py  messages.yaml  msgs.py  register.py  roles.py
bot/utils/: logger.py
utils/: logger.py  migrate.py
